vlib/v/checker/tests/mod_op_wrong_left_type_err_b.out
vlib/v/checker/tests/mod_op_wrong_left_type_err_b.v:2:2: error: mismatched types `array_int` and `any_int` 
    1 | fn main() {
    2 |     [1,2,3] % 1
      |     ~~~~~~~
    3 | }
