vlib/v/checker/tests/mod_op_wrong_left_type_err_b.v
fn main() {
	[1,2,3] % 1
}
